# yadroTasks

./: LICENSE  README.md
CRC32/: CMakeLists.txt
CRC32/crc32/: crc32.cpp  crc32.h
CRC32/tests/: CMakeLists.txt  test_crc32.cpp
is_prime/: CMakeLists.txt
is_prime/include/: Peano.h  is_prime.h
is_prime/src/: Peano.cpp  is_prime.cpp
is_prime/tests/: test_Peano.cpp  test_is_prime.cpp
